--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
   <h2 align="center">Postal Address Search</h2>
 
   <div>
-    <h2>Partial Address Search:</h2>
+    <h2>Partial address search:</h2>
     Select a country: <select name="countries" id="countries"><br><br>
     <option value="----">----</option>
     <option value="usa">USA</option>
@@ -446,7 +446,7 @@
     <option value="canada">Canada</option>
     </select>
     <br>
-    Enter address line: <br><br><input id="countryPartialAddress" type = "text" size="150"><br><br>
+    Enter address line: <br><br><input id="countryPartialAddress" type = "text" size="100"><br><br>
     <button onclick="countrySpecificSearch()" id="submit_btn2">Search</button>
     <button onclick="reset_input()" id = 'reset_input'>Reset</button>
   </div>
