--- a/index.html
+++ b/index.html
@@ -8,19 +8,11 @@
       color: black;
     }
     
-    .dark-mode {
-      background-color: rgb(49, 49, 49);
-      color: white;
-    }
     </style>
   
     <script>
       console.log("Start");
   
-      function darkMode() {
-        var element = document.body;
-        element.classList.toggle("dark-mode");
-      }
       function merge_array(res, country){
         for (const element of country) {
             res.push(element);
@@ -406,6 +398,8 @@
       document.getElementById("quadrant").value = null;
       document.getElementById("prefecture").value = null;
 
+      document.getElementById("fname").disabled = true;
+      document.getElementById("lname").disabled = true;
       document.getElementById("street").disabled = true;
       document.getElementById("bhn").disabled = true;
       document.getElementById("zip").disabled = true;
@@ -435,8 +429,7 @@
 
 <body>
 
-  <h2 align="center">Address Search</h2>
-  <button onclick="darkMode()">dark mode</button>
+  <h2 align="center">Postal Address Search</h2>
   <h2>Select a country:</h2>
   <table>
     <tr>
@@ -458,7 +451,7 @@
 
 
 
-  <h2>Provide a name:</h2>
+  <h2>Enter a name:</h2>
   <p>
     First Name: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off">
     Last Name: <input id="lname" name="lname" style=" width: 10%" type="text" placeholder="" autocomplete="off">
@@ -483,7 +476,7 @@
     Building/House No.: <input id="bhn" name="bhn" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Apt/Suite: <input id="as" name="as" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Zip: <input id="zip" name="zip" style=" width: 10%" type="text" autocomplete="off" disabled="true">
-    POB: <input id="pob" name="pob" style=" width: 10%" type="text" autocomplete="off" disabled="true">
+    P.O. Box: <input id="pob" name="pob" style=" width: 10%" type="text" autocomplete="off" disabled="true">
   </P>
   <button onclick="generate_searchCountries()" id='submit_btn'>Search</button>
   <button onclick="reset_input()" id = 'reset_input'>Reset</button>
