--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
   <h2>Select a country:</h2>
   <table>
     <tr>
-      <td>USA:<input type="checkbox" id="usa" name="usa" class="form-control" onclick="set_text_input()"></td>
+      <td>United States:<input type="checkbox" id="usa" name="usa" class="form-control" onclick="set_text_input()"></td>
       <td>Canada:<input type="checkbox" id="canada" name="canada" class="form-control" onclick="set_text_input()"><br></td>
       <td>Japan:<input type="checkbox" id="japan" name="japan" class="form-control" onclick="set_text_input()"></td>
       <td>Germany:<input type="checkbox" id="germany" name="germany" class="form-control" onclick="set_text_input()"></td>
@@ -441,7 +441,7 @@
       <td>India:<input type="checkbox" id="india" name="india" class="form-control" onclick="set_text_input()"></td>    
     </tr>
     <tr>
-      <td>UK:<input type="checkbox" id="uk" name="uk" class="form-control" onclick="set_text_input()"></td>
+      <td>United Kingdom:<input type="checkbox" id="uk" name="uk" class="form-control" onclick="set_text_input()"></td>
       <td>Spain:<input type="checkbox" id="spain" name="spain" class="form-control" onclick="set_text_input()"></td>
       <td>Brazil:<input type="checkbox" id="brazil" name="brazil" class="form-control" onclick="set_text_input()"></td>
       <td>Mexico:<input type="checkbox" id="mexico" name="mexico" class="form-control" onclick="set_text_input()"><br></td>
@@ -449,7 +449,13 @@
     </tr>
   </table>
 
-  <h2>Fill out address field(s)</h2>
+  <h2>Enter a name:</h2>
+  <p>
+    First Name: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off">
+    Last Name: <input id="lname" name="lname" style=" width: 10%" type="text" placeholder="" autocomplete="off">
+  </p>
+
+  <h2>Fill out address field(s):</h2>
   <P>
     State: <input id="state" name="state" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Province: <input id="province" name="province" style=" width: 10%" type="text" autocomplete="off" disabled="true">
@@ -478,12 +484,12 @@
     <h2>Partial address search</h2>
     Select a country: <select name="countries" id="countries"><br><br>
     <option value="----">----</option>
-    <option value="usa">USA</option>
+    <option value="usa">United States</option>
     <option value="brazil">Brazil</option>
     <option value="japan">Japan</option>
     <option value="southkorea">South Korea</option>
     <option value="northkorea">North Korea</option>
-    <option value="uk">UK</option>
+    <option value="uk">United Kingdom</option>
     <option value="germany">Germany</option>
     <option value="india">India</option>
     <option value="spain">Spain</option>
