--- a/index.html
+++ b/index.html
@@ -451,8 +451,8 @@
 
   <h2>Enter a name:</h2>
   <p>
-    First Name: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off">
-    Last Name: <input id="lname" name="lname" style=" width: 10%" type="text" placeholder="" autocomplete="off">
+    First Name: <input id="fname" name="fname" style=" width: 10%" type="text" autocomplete="off" disabled="true">
+    Last Name: <input id="lname" name="lname" style=" width: 10%" type="text" autocomplete="off" disabled="true">
   </p>
 
   <h2>Fill out address field(s):</h2>
