--- a/index.html
+++ b/index.html
@@ -451,18 +451,16 @@
 
   <h2>Fill out address field(s):</h2>
   <P>
-    First Name: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
-    Last Name: <input id="lname" name="lname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
     State: <input id="state" name="state" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Province: <input id="province" name="province" style=" width: 10%" type="text" autocomplete="off" disabled="true">
-    Prefecture: <input id="prefecture" name="prefecture" style=" width: 10%" type="text" autocomplete="off" disabled="true">
+    Prefecture: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
     City: <input id="city" name="city" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Locality: <input id="locality" name="locality" style=" width: 10%" type="text" autocomplete="off" disabled="true"><br>
     Town: <input id="town" name="town" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Village: <input id="village" name="village" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Subdivision: <input id="subdivision" name="subdivision" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Sector: <input id="sector" name="sector" style=" width: 10%" type="text" autocomplete="off" disabled="true">
-    Quadrant: <input id="quadrant" name="quadrant" style=" width: 10%" type="text" autocomplete="off" disabled="true"><br>
+    Quadrant: <input id="lname" name="lname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
     Block: <input id="block" name="block" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Neighborhood: <input id="neighborhood" name="neighborhood" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Quarter: <input id="quarter" name="quarter" style=" width: 10%" type="text" autocomplete="off" disabled="true">
