--- a/index.html
+++ b/index.html
@@ -449,13 +449,14 @@
     </tr>
   </table>
 
+
   <h2>Fill out address field(s):</h2>
   <P>
     First Name: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
     Last Name: <input id="lname" name="lname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
     State: <input id="state" name="state" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Province: <input id="province" name="province" style=" width: 10%" type="text" autocomplete="off" disabled="true">
-    Prefecture: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
+    Prefecture: <input id="prefecture" name="prefecture" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     City: <input id="city" name="city" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Locality: <input id="locality" name="locality" style=" width: 10%" type="text" autocomplete="off" disabled="true"><br>
     Town: <input id="town" name="town" style=" width: 10%" type="text" autocomplete="off" disabled="true">
