--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
 
   <h2>Fill out address field(s):</h2>
   <P>
-    First Name: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
-    Last Name: <input id="lname" name="lname" style=" width: 10%" type="text" placeholder="" autocomplete="off" disabled="true">
+    First Name: <input id="fname" name="fname" style=" width: 10%" type="text" placeholder="" autocomplete="off">
+    Last Name: <input id="lname" name="lname" style=" width: 10%" type="text" placeholder="" autocomplete="off">
     State: <input id="state" name="state" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Province: <input id="province" name="province" style=" width: 10%" type="text" autocomplete="off" disabled="true">
     Prefecture: <input id="prefecture" name="prefecture" style=" width: 10%" type="text" autocomplete="off" disabled="true">
